--- a/src/components/swiperhome/swiperhome.module.css
+++ b/src/components/swiperhome/swiperhome.module.css
@@ -155,3 +155,15 @@
     font-size: 34px;
   }
 }
+
+@media(max-width: 568px){
+  .sliderTxt2 p{
+    font-size: 20px;
+  }
+ 
+
+  .sliderTxt3{
+    bottom: 20%;
+    left: 45%
+  }
+}
